[project]
name = "hackthon-book-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.20.0",
    "fastapi>=0.124.0",
    "fastapi-limiter[redis]>=0.1.6",
    "openai-agents>=0.6.2",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
